--- a/css/contacts.css
+++ b/css/contacts.css
@@ -182,6 +182,7 @@ body {
 	top: -90px;
 	left: 0;
 	width: 300px;
+	z-index: -20;
 }
 
 .contacts-blur-1 img:nth-child(2) {
@@ -191,6 +192,7 @@ body {
     width: 200px;
     transform: scale(-1, 1);
     opacity: 0.5;
+    z-index: -20;
 }
 
 .contacts-blur-1 img:nth-child(3) {
@@ -199,6 +201,7 @@ body {
     right: 0;
     width: 250px;
     opacity: 0.5;
+    z-index: -20;
 }
 
 .adress__map {
@@ -263,6 +266,7 @@ body {
     width: 230px;
     transform: scale(-1, 1);
     opacity: 0.6;
+    z-index: -20;
 }
 
 .contacts-round {
@@ -271,6 +275,12 @@ body {
     bottom: -240px;
     width: 205px;
     height: auto;
+}
+
+.write-us__link,
+.write-us__desc {
+	position: relative;
+	z-index: 20;
 }
 
 
