--- a/css/profit.css
+++ b/css/profit.css
@@ -119,6 +119,11 @@
 		display: none;
 	}
 
+	.source__link {
+		position: relative;
+		z-index: 20;
+	}
+
 
 
 
